--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/michaelamancio89/whatsapp-clone#readme",
   "dependencies": {
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.0"
+    "firebase": "^8.2.0",
+    "webpack": "^5.10.2",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
